--- a/src/test/java/gerard/resources/properties/OR.properties
+++ b/src/test/java/gerard/resources/properties/OR.properties
@@ -1,1 +1,6 @@
+
+#bank mgr login test
 bmlBtn=div > div:last-child > .btn.btn-primary.btn-lg
+
+#add cust test
+addCustBtn=button[ng-click='addCust()']
