--- a/src/test/java/gerard/resources/properties/OR.properties
+++ b/src/test/java/gerard/resources/properties/OR.properties
@@ -4,3 +4,7 @@ bmlBtn=div > div:last-child > .btn.btn-primary.btn-lg
 
 #add cust test
 addCustBtn=button[ng-click='addCust()']
+firstname=input[ng-model='fName']
+lastname=input[ng-model='lName']
+postcode=input[ng-model='postCd']
+addBtn=button[type='submit']
