--- a/src/test/java/gerard/resources/properties/OR.properties
+++ b/src/test/java/gerard/resources/properties/OR.properties
@@ -1,10 +1,19 @@
 
 #bank mgr login test
-bmlBtn=div > div:last-child > .btn.btn-primary.btn-lg
+bmlBtn_CSS=div > div:last-child > .btn.btn-primary.btn-lg
+
 
 #add cust test
-addCustBtn=button[ng-click='addCust()']
-firstname=input[ng-model='fName']
-lastname=input[ng-model='lName']
-postcode=input[ng-model='postCd']
-addBtn=button[type='submit']
+addCustBtn_CSS=button[ng-click='addCust()']
+firstname_CSS=input[ng-model='fName']
+lastname_CSS=input[ng-model='lName']
+lastname_XPATH=//input[@ng-model='lName']
+postcode_CSS=input[ng-model='postCd']
+addBtn_CSS=button[type='submit']
+
+
+#open acct test
+openaccount_CSS=button[ng-class='btnClass2']
+customer_CSS=#userSelect
+currency_CSS=#currency
+process_CSS=button[type='submit']
